--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,28 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
-    <div class="header"></div>
+    <header>
+      <h1>Leaderboard</h1>
+    </header>
+    <div id="main-div" class="main-div">
+
+      <div id='leaderboard-div' class='leaderboard-div'>
+        <div class="scores-header">
+          <h2>Recent Scores</h2> <button type='button' id='refresh-btn'>Refresh</button>
+        </div>
+        <div id='scoreboard' class="scoreboard"></div>
+      </div>    
+      <div id="user-input-div" class="user-input-div">
+        <h2>Add your score </h2>
+      <form id='form'>
+        <label for="username"></label>
+        <input type="text", id='username', placeholder='Your Name'>
+        <label for="yourscore"></label>
+        <input type="text", id='yourscore', placeholder='Your Score'>
+        <button type="submit">Submit</button>
+      </form>
+        <div>
+    
+    </div>
   </body>
 </html>
